--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-history-api-fallback": "^1.5.0",
     "cookie-parser": "^1.4.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.2.0"
   }
 }
