--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run watch:webpack\" \"npm run watch:server\" ",
+    "dev": "cross-env NODE_ENV=development concurrently \"npm run watch:webpack\" \"npm run watch:server\" ",
     "watch:server": "nodemon --watch server --delay 50ms server/index.js",
     "watch:webpack": "nodemon --watch webpack --delay 100ms -x webpack -- --watch --config webpack/webpack.config.js"
   },
@@ -24,8 +24,11 @@
     "nodemon": "^1.18.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-hot-loader": "^4.3.11",
     "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
